--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,9 +5,9 @@ import Facebook from "../assets/svg/facebook.svg";
 ---
 
 <nav
-  class="fixed flex justify-between bg-secondary px-8 z-50 w-full h-16 items-center"
+  class="fixed top-0 flex justify-between bg-secondary px-8 z-50 w-full h-16 items-center"
 >
-  <img src="image/logo.webp" alt="Ilogs" class="icon w-12 h-12 md:w-20 md:h-20" />
+  <img src="/image/logo.webp" alt="Ilogs" class="icon w-12 h-12 md:w-20 md:h-20" />
 
   <div class="flex flex-row p-3 gap-3">
     <a href="" class="icon w-6 h-6 md:w-10 md:h-10 fill-light"> <Email /> </a>
