--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -2,15 +2,15 @@
 import Title from "./Title.astro";
 ---
 
-<section class="about p-5 pt-35 md:pt-20 md:p-20">
+<section class="about p-5 pt-35 sm:pt-20 md:p-20">
   <div
-    class="about-box mx-10 md:mx-24 text-center rounded-3xl p-10 md:p-20 shadow-lg shadow-primary border-2 border-primary"
+    class="about-box mx-10 sm:mx-24 text-center rounded-3xl p-4 sm:p-20 shadow-lg shadow-primary border-2 border-primary"
   >
-    <div class="about-title mb-3 md:mb-10 overflow-hidden">
+    <div class="about-title mb-3 sm:mb-10 overflow-hidden">
       <Title title="¿Qué somos?" />
     </div>
 
-    <p class="about-text text-xs md:text-3xl">
+    <p class="about-text text-xs sm:text-3xl">
       Somos la solución líder en el control de salidas escolares diseñada para
       que las escuelas puedan ofrecer un entorno más seguro, organizado y
       eficiente. Nuestra plataforma facilita el registro, autorización y
