--- a/src/components/BenefitCard.astro
+++ b/src/components/BenefitCard.astro
@@ -8,7 +8,7 @@ type Props = {
 const { title, subtitle } = Astro.props;
 ---
 
-<div class="flex justify-start gap-2 px-9">
+<div class="flex justify-start gap-2">
   <slot />
   <div>
     <h1 class=" text-xs md:text-xl text-bold font-brand">{title}</h1>
