--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -2,23 +2,23 @@
 
 ---
 
-<section class="callTo my-15 bg-primary p-8">
+<section class="callTo my-15 bg-primary py-8">
   <div class="w-full h-full">
     <div
-      class="bg-[url('image/bg-CallToAction.webp')] bg-no-repeat bg-contain bg-bottom md:bg-contain"
+      class="bg-[url(/image/bg-CallToAction.webp)] bg-no-repeat bg-contain bg-center sm:bg-contain"
     >
-      <div class="justify-items-center p-5 md:p-25">
+      <div class="justify-items-center px-7 md:p-25">
         <p
-          class="callTo-text text-xs md:text-3xl text-center mb-4 md:mb-10 text-light"
+          class="callTo-text text-xs sm:text-3xl text-center mb-4 sm:mb-10 text-light"
         >
-          Somos un equipo comprometido de profesionales <br />
-          dedicados a mejorar la experiencia escolar y a <br />
-          proporcionar herramientas efectivas para el control <br /> de salidas estudiantiles.
+          Somos un equipo comprometido de profesionales <br/>
+          dedicados a mejorar la experiencia escolar y a <br/>
+          proporcionar herramientas efectivas para el control <br/> de salidas estudiantiles.
         </p>
         <div class="callTo-button">
           <a
             href=""
-            class="font-brand text-xs md:text-2xl text-light bg-dark px-5 md:px-10 py-1 rounded-full hover:bg-light transition hover:text-dark"
+            class="font-brand text-center text-xs sm:text-2xl text-light bg-dark px-5 sm:px-10 py-1 rounded-full hover:bg-light transition hover:text-dark"
           >
             CONTACTANOS
           </a>
@@ -41,7 +41,7 @@
 
   gsap.from(split.lines, {
     opacity: 0,
-    x: 60,
+    x: 40,
     stagger: 0.25,
     duration: 1,
     scrollTrigger: {
@@ -51,7 +51,7 @@
   });
   gsap.from(".callTo-button", {
     opacity: 0,
-    x: 60,
+    x: 40,
     duration: 1,
     scrollTrigger: {
       trigger: ".callTo",
@@ -61,7 +61,7 @@
   gsap.from(".callTo", {
     opacity: 0,
     duration: 1,
-    delay: 0.8,
+    delay: 0.25,
     scrollTrigger: {
       trigger: ".callTo",
       start: "top 60%",
