--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,28 +2,28 @@
 
 ---
 
-<section class="bg-primary">
+<section class="bg-primary ">
   <div
-    class="relative bg-[url('image/bg-hero2.webp')] bg-no-repeat bg-contain bg-center md:bg-[url('image/bg-hero.webp')]"
+    class="relative bg-[url(/image/bg-hero2.webp)] bg-no-repeat bg-contain bg-center sm:bg-[url(/image/bg-hero.webp)]"
   >
-    <div class="hero flex flex-col md:flex-row items-center">
+    <div class="hero flex flex-col sm:flex-row justify-items-center">
       <div
-        class="w-full flex flex-col items-center text-center justify-center mt-25 md:mt-35"
+        class="w-full flex flex-col items-center text-center justify-center mt-25 sm:mt-35"
       >
-        <h1 class="hero-text font-brand text-xl md:text-4xl text-light">
-          SOLUCIÓN SEGURA Y <br />
+        <h1 class="hero-text font-brand text-base sm:text-4xl text-light">
+          SOLUCIÓN SEGURA Y<br />
           EFICIENTE <br />
-          PARA EL CONTROL DE <br />
+          PARA EL CONTROL DE<br /> 
           SALIDAS ESCOLARES
         </h1>
-        <p class="hero-text text-xs md:text-xl text-light">
+        <p class="hero-text text-xs sm:text-xl text-light">
           Optimiza tus procesos escolares y ofrece tranquilidad<br /> a padres y
           docentes.
         </p>
 
         <a
           href=""
-          class="hero-button mt-4 font-brand text-xs md:text-2xl text-light bg-dark px-10 py-2 rounded-full hover:bg-light transition hover:text-dark"
+          class="hero-button mt-4 font-brand text-xs sm:text-2xl text-light bg-dark px-10 py-2 rounded-full hover:bg-light transition hover:text-dark"
         >
           CONTACTANOS
         </a>
@@ -32,7 +32,7 @@
         <img
           src="image/MOCKUP-LOGIN.webp"
           alt="Mockup"
-          class="hero-image w-88 h- md:w-4xl md:h-[597px] align-center absolute z-15 top-65 md:top-10"
+          class="hero-image w-88  sm:w-4xl sm:h-[597px]  absolute z-15 top-65 sm:top-10"
         />
       </div>
     </div>
