--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import FAQ from "../components/FAQ.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout>
+<Layout title="iLogs">
   <Hero />
   <AboutUs />
   <Benefits />
