--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -1,5 +1,6 @@
 ---
 import Title from "./Title.astro";
+import ArrowRight from "../assets/svg/arrowRight.svg";
 
 const faqs = [
   {
@@ -18,7 +19,7 @@ const faqs = [
 ---
 
 <section class="rounded-2xl p-5 md:p-20 md:mx-auto">
-  <div class="faq">
+  <div class="faq faq-question">
     <div class="faq-question mb-10">
       <Title title="Preguntas Frecuentes" />
     </div>
@@ -50,6 +51,13 @@ const faqs = [
         ))
       }
     </ul>
+    <div
+      class="flex flex-row justify-center gap-1 items-center hover:text-primary hover:scale-105 duration-500"
+    >
+      <a href="/FAQPage/" class="text-center text-xl">Ver Mas</a>
+
+      <ArrowRight class="w-9 h-9 fill-current" />
+    </div>
   </div>
 </section>
 <script>
