--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,7 +23,7 @@ interface Props {
     <meta property="og:url" content="https://descubre.ilogs.com.mx/" />
     <meta property="og:image" content="/image/BannerOG.webp"/>
   </head>
-  <body class="bg-background text-foreground font-sans absolute overflow-x-hidden">
+  <body class="bg-background text-foreground font-sans relative overflow-x-hidden pb-15 sm:pb-30">
     <Navbar />
     <main>
       <slot />
