--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,13 @@
 ---
 import Logo from 'image/logo.webp';
 ---
-<footer class="bg-secondary  flex flex-wrap justify-around items-center ">
+<footer class="bg-secondary  flex flex-wrap justify-around items-center absolute bottom-0 w-full">
     <div>
-    <img src="/image/logo.webp" alt="Ilogs" class="w-14  h-14  md:w-20 md:h-20"/>
+    <img src="/image/logo.webp" alt="Ilogs" class="w-12  h-12  md:w-20 md:h-20"/>
     </div>
     <div>
-        <img src="/image/googleplay-appstore.webp" alt="Ilogs" class="w-auto md:h-[53px]"/>
+        <img src="/image/googleplay-appstore.webp" alt="Ilogs" class="w-60 sm:w-auto sm:h-[53px]"/>
     </div>
-    <div> <h2>Copyright 2025</h2></div>
+    <div> <h2 class="text-[8px] sm:text-lg">Copyright 2025</h2></div>
 
 </footer>
