Refactor responsive design

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -10,7 +10,7 @@ import Title from "./Title.astro";
       <Title title="¿Qué somos?" />
     </div>
 
-    <p class="about-text text-xs sm:text-3xl">
+    <p class="about-text  text-xs sm:text-lg lg:text-3xl">
       Somos la solución líder en el control de salidas escolares diseñada para
       que las escuelas puedan ofrecer un entorno más seguro, organizado y
       eficiente. Nuestra plataforma facilita el registro, autorización y
