--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -2,27 +2,19 @@
 
 ---
 
-<section class="callTo my-15 bg-primary py-8">
+<section class="callTo my-15 bg-primary py-8 flex content-center">
   <div class="w-full h-full">
     <div
-      class="bg-[url(/image/bg-CallToAction.webp)] bg-no-repeat bg-contain bg-center sm:bg-contain"
+      class="bg-[url(/image/bg-call2.webp)] lg:bg-[url(/image/bg-CallToAction.webp)] h-30 md:h-auto bg-no-repeat bg-contain bg-center md:bg-size-[550px]  lg:bg-contain"
     >
-      <div class="justify-items-center px-7 md:p-25">
+      <div class="px-10 lg:p-25">
         <p
-          class="callTo-text text-xs sm:text-3xl text-center mb-4 sm:mb-10 text-light"
+          class="callTo-text content-center  text-xs md:text-lg lg:text-3xl text-center mb-4 lg:mb-10 text-light"
         >
-          Somos un equipo comprometido de profesionales <br/>
-          dedicados a mejorar la experiencia escolar y a <br/>
-          proporcionar herramientas efectivas para el control <br/> de salidas estudiantiles.
+          Somos un equipo comprometido de profesionales <br />
+          dedicados a mejorar la experiencia escolar y a <br />
+          proporcionar herramientas efectivas para el control <br /> de salidas estudiantiles.
         </p>
-        <div class="callTo-button">
-          <a
-            href=""
-            class="font-brand text-center text-xs sm:text-2xl text-light bg-dark px-5 sm:px-10 py-1 rounded-full hover:bg-light transition hover:text-dark"
-          >
-            CONTACTANOS
-          </a>
-        </div>
       </div>
     </div>
   </div>
