--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -54,9 +54,9 @@ const faqs = [
     <div
       class="flex flex-row justify-center gap-1 items-center hover:text-primary hover:scale-105 duration-500"
     >
-      <a href="/FAQPage/" class="text-center text-xl">Ver Mas</a>
+      <a href="/FAQPage/" class="text-center text-xs md:text-xl">Ver Mas</a>
 
-      <ArrowRight class="w-9 h-9 fill-current" />
+      <ArrowRight class="w-5 h-5 md:w-9 md:h-9 fill-current" />
     </div>
   </div>
 </section>
