--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -14,7 +14,7 @@ const thumbnail = "/image/frontmatterilogs.webp";
   <div class="testimonials mb-6 sm:mb-15">
     <Title title="Testimonios" />
   </div>
-  <div class="sm:flex gap-4">
+  <div class="lg:flex gap-4">
     <div
       class="testimonials w-full justify-items-center aspect-video bg-black rounded-xl overflow-hidden"
       onclick={`this.outerHTML = '<iframe class="items-center w-3xs sm:w-full h-37 sm:h-[439px] rounded-xl" src="https://www.youtube.com/embed/${videoId}?autoplay=1" title="${title}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'`}
