--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -9,9 +9,9 @@ import Title from "./Title.astro";
     <div class="benefits-card mt-10 mb-6 md:mt-20">
       <Title title="Beneficios" />
     </div>
-    <div class="flex flex-col md:flex-row gap-4">
+    <div class="flex flex-col lg:flex-row gap-4">
       <div
-        class="w-full flex flex-col justify-center gap-5 md:gap-11 px-10 order-1 md:order-2"
+        class="w-full flex flex-col justify-center gap-5 md:gap-11 px-10 order-1 lg:order-2"
       >
         {
           benefits.map((benefit) => (
@@ -23,7 +23,7 @@ import Title from "./Title.astro";
           ))
         }
       </div>
-      <div class="w-full justify-items-center order-2 md:order-1">
+      <div class="w-full justify-items-center order-2 lg:order-1">
         <img
           src="image/MOKCUP-INICIO.webp"
           alt=""
