--- a/src/components/TestimonialsCard.astro
+++ b/src/components/TestimonialsCard.astro
@@ -9,11 +9,11 @@ const { name, message, estrella = 5} = Astro.props;
     <slot/>
   <div class="flex justify-start ">
     {Array.from({ length: estrella }).map(() => (
-      <Star class="fill-primary w-3 h-3 md:w-6 md:h-6" />
+      <Star class="fill-primary w-3 h-3 lg:w-6 lg:h-6" />
     ))}
     </div>
- <h1 class="text-xs md:text-xl font-brand">{name}</h1>
-  <p class=" text-xs md:text-2xl">{message}</p>
+ <h1 class="text-xs md:text-lg lg:text-xl font-brand">{name}</h1>
+  <p class="text-xs md:text-lg lg:text-2xl">{message}</p>
   
 </div>
 
