--- a/src/pages/FAQPage.astro
+++ b/src/pages/FAQPage.astro
@@ -14,7 +14,7 @@ import Arrowleft from "../assets/svg/arrowleft.svg";
       >
       <Title title="Preguntas Frecuentes" />
     </div>
-    <div class="faq-page  sm:grid sm:grid-cols-2 sm:gap-x-8 sm:gap-y-10 sm:px-4">
+    <div class="faq-page  lg:grid lg:grid-cols-2 lg:gap-x-8 lg:gap-y-10 lg:px-4">
       {
         faqs.map((faq) => (
           <FAQCard
