--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,17 +6,17 @@
   <div
     class="relative bg-[url(/image/bg-hero2.webp)] bg-no-repeat bg-contain bg-center sm:bg-[url(/image/bg-hero.webp)]"
   >
-    <div class="hero flex flex-col lg:flex-row justify-items-center">
+    <div class="hero flex flex-col lg:flex-row content-center justify-center">
       <div
-        class="w-full flex flex-col items-center text-center justify-center mt-25 sm:mt-35"
+        class="w-full flex flex-col items-center text-center justify-center mt-25 lg:mt-80"
       >
-        <h1 class="hero-text font-brand text-base sm:text-4xl text-light">
+        <h1 class="hero-text font-brand text-base lg:text-4xl text-light">
           SOLUCIÓN SEGURA Y<br />
           EFICIENTE <br />
           PARA EL CONTROL DE<br />
           SALIDAS ESCOLARES
         </h1>
-        <p class="hero-text text-xs sm:text-xl text-light">
+        <p class="hero-text text-xs lg:text-xl text-light">
           Optimiza tus procesos escolares y ofrece tranquilidad<br /> a padres y
           docentes.
         </p>
@@ -25,7 +25,7 @@
         <img
           src="image/MOCKUP-LOGIN.webp"
           alt="Mockup"
-          class="hero-image w-88 lg:w-4xl lg:h-4/5 absolute z-15 top-65 lg:top-10"
+          class="hero-image w-88 md:w-96 md:h-1/2 lg:w-7xl lg:h-11/12 absolute  z-15 top-55 md:top-80 lg:top-10  left-15 md:left-60 lg:left-5/12"
         />
       </div>
     </div>
