--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,10 +4,10 @@ import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
 import WhatsappWidget from "../components/whatsappWidget.astro";
 
-const {title} = Astro.props;
+const { title } = Astro.props;
 
 interface Props {
-  title : string;
+  title: string;
 }
 ---
 
@@ -20,12 +20,29 @@ interface Props {
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <meta property="og:title" content="iLogs" />
-    <meta property="og:description" content="iLogs Seguridad & Orden en cada Salida Escolar" />
+    <meta
+      property="og:description"
+      content="iLogs Seguridad & Orden en cada Salida Escolar"
+    />
     <meta property="og:url" content="https://descubre.ilogs.com.mx/" />
-    <meta property="og:image" content="/image/BannerOG.webp"/>
+    <meta property="og:image" content="/image/BannerOG.webp" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="iLogs" />
+    <meta
+      name="twitter:description"
+      content="iLogs Seguridad & Orden en cada Salida Escolar"
+    />
+    <meta
+      name="twitter:image"
+      content="https://descubre.ilogs.com.mx/image/BannerOG.webp"
+    />
+    <meta name="twitter:url" content="https://descubre.ilogs.com.mx/" />
   </head>
-  <body class="bg-background text-foreground font-sans relative overflow-x-hidden pb-30 sm:pb-30">
-    <WhatsappWidget/>
+  <body
+    class="bg-background text-foreground font-sans relative overflow-x-hidden pb-30 sm:pb-30"
+  >
+    <WhatsappWidget />
     <Navbar />
     <main>
       <slot />
