Refactor animation duration

--- a/src/components/whatsappWidget.astro
+++ b/src/components/whatsappWidget.astro
@@ -4,9 +4,9 @@ import Whatsapp from "../assets/svg/whatsapp.svg";
 
 <button
   id="toggle-form"
-  class="widget fixed bottom-5 right-5 z-50 bg-green-500 p-3 rounded-full shadow-lg hover:scale-105 transition transition-discrete"
+  class="widget fixed bottom-5 right-3 lg:right-5 z-50 bg-green-500 p-3 rounded-full shadow-lg hover:scale-105 transition transition-discrete"
 >
-  <Whatsapp class="w-6 h-6 sm:w-12 sm:h-12" />
+  <Whatsapp class="w-9 h-9 sm:w-12 sm:h-12" />
 </button>
 
 <div
