--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -3,17 +3,17 @@ import Title from "./Title.astro";
 import ArrowRight from "../assets/svg/arrowRight.svg";
 
 const faqs = [
-  {
-    question: "¿Cómo funciona la app?",
-    answer: "La app permite registrar salidas seguras en tiempo real.",
+   {
+    question: "¿Los QRs pueden ser escaneados por otra aplicación?",
+    answer: "No. Los códigos QR generados en iLogs son cifrados y no pueden ser leídos por aplicaciones externas.",
+  },
+   {
+    question: "¿Tengo que descargar alguna aplicación? ",
+    answer: "Sí. Tanto padres de familia como colaboradores deben descargar la aplicación. Está disponible para dispositivos Android y Apple.",
   },
   {
-    question: "¿Necesito internet?",
-    answer: "Sí, para sincronizar los registros en la nube.",
-  },
-  {
-    question: "¿Qué dispositivos son compatibles?",
-    answer: "Funciona en cualquier navegador moderno.",
+    question: "¿El tutor necesita internet para usar la aplicación?",
+    answer: "Para ciertas funciones, como autorizar a familiares o consultar historial, sí se necesita conexión. Sin embargo, la generación del QR para la salida del alumno funciona sin necesidad de conexión a internet.",
   },
 ];
 ---
