--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -35,7 +35,7 @@
       class="bottom-0 relative z-0"
     >
       <path
-        class="fill-current text-background"
+        class="fill-[#ffffff] dark:fill-[#262626]"
         d="M0,160L80,176C160,192,320,224,480,202.7C640,181,800,107,960,69.3C1120,32,1280,32,1360,32L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
       ></path>
     </svg>
