--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -6,7 +6,7 @@ import Title from "./Title.astro";
 
 <section class="p-5 md:p-20">
   <div class="benefits">
-    <div class="benefits-card mt-10 mb-6 md:mt-20">
+    <div class="benefits-card mt-10  md:mt-20">
       <Title title="Beneficios" />
     </div>
     <div class="flex flex-col lg:flex-row gap-4">
