change font size

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -2,21 +2,20 @@
 import Title from "./Title.astro";
 ---
 
-<section class="about p-5 pt-35 sm:pt-20 md:p-20">
+<section class="about p-5 pt-35 sm:pt-20">
   <div
-    class="about-box mx-10 sm:mx-24 text-center rounded-3xl p-4 sm:p-20 shadow-lg shadow-primary border-2 border-primary"
+    class="about-box mx-10 lg:mx-24 text-center rounded-3xl p-3 lg:p-10  border-2 border-primary"
   >
     <div class="about-title mb-3 sm:mb-10 overflow-hidden">
-      <Title title="¿Qué somos?" />
+      <Title title="¿Quiénes somos?" />
     </div>
 
-    <p class="about-text  text-xs sm:text-lg lg:text-3xl">
-      Somos la solución líder en el control de salidas escolares diseñada para
-      que las escuelas puedan ofrecer un entorno más seguro, organizado y
-      eficiente. Nuestra plataforma facilita el registro, autorización y
-      supervisión de salidas de estudiantes conectando de forma transparente a
-      padres y personal escolar.
-    </p>
+    <p class="about-text  text-base sm:text-lg lg:text-3xl">
+      Somos una plataforma digital mexicana diseñada para escuelas privadas de nivel
+maternal, preescolar, primaria, secundaria y preparatoria, donde los padres o tutores
+recogen a sus hijos. Facilitamos un proceso de salida más seguro, ágil y ordenado,
+eliminando listas manuales y mejorando la experiencia de entrega diaria.
+</p>
   </div>
 </section>
 <script>
