--- a/src/components/BenefitCard.astro
+++ b/src/components/BenefitCard.astro
@@ -11,8 +11,8 @@ const { title, subtitle } = Astro.props;
 <div class="flex justify-start gap-2">
   <slot />
   <div>
-    <h1 class=" text-xs md:text-xl text-bold font-brand">{title}</h1>
-    <h2 class=" text-xs md:text-2xl">
+    <h1 class=" text-base md:text-xl text-bold font-brand">{title}</h1>
+    <h2 class=" text-base md:text-2xl">
       {subtitle}
     </h2>
   </div>
