--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,22 +11,25 @@
         class="w-full flex flex-col items-center text-center justify-center mt-25 lg:mt-60"
       >
         <h1 class="hero-text font-brand text-base lg:text-4xl text-light">
-          SOLUCIÓN SEGURA Y<br />
-          EFICIENTE <br />
-          PARA EL CONTROL DE<br />
-          SALIDAS ESCOLARES
+          Digitaliza las salidas <br />  escolares.Hazlas más<br /> seguras y ágiles.
         </h1>
-        <p class="hero-text text-xs lg:text-xl text-light">
-          Optimiza tus procesos escolares y ofrece tranquilidad<br /> a padres y
-          docentes.
+        <p class="hero-text text-base lg:text-xl text-light mt-2">
+          Optimiza cada entrega con <br/>una solución sencilla y confiable.
         </p>
+        <a
+          href=""
+          class=" button-hero rounded-2xl p-2 lg:p-4 bg-dark text-light font-bold mt-6 text-xs lg:text-2xl hover:bg-light hover:text-dark"
+          >¡Solicita una demo GRATIS!</a
+        >
       </div>
       <div class="w-full">
-        <img
-          src="image/MOCKUP-LOGIN.webp"
-          alt="Mockup"
-          class="hero-image w-80 md:w-96 md:h-1/2 lg:w-7xl lg:h-11/12 absolute  z-15 top-55 md:top-80 lg:top-10  left-7 md:left-60 lg:left-5/12"
-        />
+        <div>
+          <img
+            src="image/hero.png"
+            alt="Seguridad Escolar"
+            class="hero-image w-60 lg:w-3xl lg:h-3/4 absolute z-15 top-55 md:top-80 lg:top-10 left-7 md:left-60 lg:left-3/6"
+          />
+        </div>
       </div>
     </div>
     <svg
@@ -63,7 +66,6 @@
     },
   });
 
-
   gsap.from(".hero-image", {
     y: 150,
     opacity: 0,
@@ -73,5 +75,11 @@
       trigger: ".hero",
       start: "top 80%",
     },
+    
+  });
+  gsap.from(".button-hero",{
+    y:100,
+    opacity:-10,
+    duration:0.5,
   });
 </script>
