--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,7 +6,7 @@ import Linkedin from "../assets/svg/linkedin.svg";
 ---
 
 <nav
-  class="fixed top-0 flex justify-between bg-secondary px-8 z-50 w-full h-16 items-center"
+  class="fixed top-0 flex justify-between bg-secondary px-8 z-50 w-full h-16 items-center shadow-md"
 >
   <img
     src="/image/logo.webp"
@@ -51,6 +51,6 @@ import Linkedin from "../assets/svg/linkedin.svg";
   gsap.from(".icon", {
     y: -100,
     stagger: 0.25,
-    duration: 1,
+    duration: 0.3,
   });
 </script>
