--- a/src/components/FAQCard.astro
+++ b/src/components/FAQCard.astro
@@ -16,10 +16,10 @@ const { question, answer, number } = Astro.props;
   </div>
   <div class="">
     <div class="border-b-1 border-primary mb-2">
-      <h1 class="font-bold text-xs sm:text-xl">{question}</h1>
+      <h1 class="font-bold text-base sm:text-xl">{question}</h1>
     </div>
     <div>
-      <p class="text-xs sm:text-xl">{answer}</p>
+      <p class="text-base sm:text-xl">{answer}</p>
     </div>
   </div>
 </div>
