--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,8 @@
 import Hero from "../components/Hero.astro";
 import AboutUs from "../components/AboutUs.astro";
 import Benefits from "../components/Benefits.astro";
-import Testimonials from "../components/Testimonials.astro";
-import CallToAction from "../components/CallToAction.astro";
-import FAQ from "../components/FAQ.astro";
+import Video from "../components/video.astro";
+import Videotestimonio from "../components/Videotestimonio.astro";
 
 import Layout from "../layouts/Layout.astro";
 ---
@@ -13,7 +12,6 @@ import Layout from "../layouts/Layout.astro";
   <Hero />
   <AboutUs />
   <Benefits />
-  <Testimonials />
-  <CallToAction />
-  <FAQ />
+  <Video />
+  <Videotestimonio />
 </Layout>
