--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,11 +1,12 @@
 ---
 type Props = {
   title: string;
+  class?: string;
 };
 
-const { title } = Astro.props;
+const { title, class: className = 'text-primary' } = Astro.props;
 ---
 
-<h2 class="text-primary text-xl md:text-5xl font-brand text-center">
+<h2 class="text-2xl md:text-3xl lg:text-5xl font-brand text-center" class:list={[ className ]} >
   {title}
 </h2>
